fixed alignment on wording for connect

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ a.button:hover {
   transition-duration: 0.4s;
 }
 
-a.smallButton{
+/*a.smallButton{
   font-weight: 300;
   border: .1em solid white;
   color: #FFF;
@@ -114,21 +114,22 @@ a.smallButton:hover{
   color: rgba(0,0,0, 0.5);
   transition-property: color, background-color;
   transition-duration: 0.4s;
+}*/
+
+.connectButton{
+  height: 100px;
+  width: 100px;
+  border: 0; 
+  text-align:center;
+  margin:10px 25px;
 }
 
-/*.connectButton{
-  height: 20px;
-  width: 20px;
-  padding: .5% .5%;
-  border: 0;
-}
-NOT WORKING
 a.connectButton:hover{
   background-color: #FFF;
   color: rgba(0,0,0, 0.5);
   transition-property: color, background-color;
   transition-duration: 0.4s;
-}*/
+}
 
 a.footerNavArrow{
   font-size: 1em;
